--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>seo protocol</title>
+    <title>L'expert des liens sortants</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  <!-- Google web font "Open Sans" -->
     <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">                <!-- Font Awesome -->
     <link rel="stylesheet" href="css/bootstrap.min.css">                                      <!-- Bootstrap style -->
@@ -23,8 +23,8 @@
                 <div class="row tm-site-header">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-xs-center">
 
-                        <h1 class="tm-site-title">Seo Protocol</h1>
-                        <p class="tm-site-description">This is an experiment</p>
+                        <h1 class="tm-site-title">Liens Sortants</h1>
+                        <p class="tm-site-description">L'expert des liens sortants</p>
 
                     </div>
                 </div>
@@ -42,9 +42,9 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">50 dollar PTC</h2>
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="50dollarptc.com" rel="nofollow" >50dollarptc.com</a>
+                              <a href="50dollarptc.com" alt='lien sortant' >50dollarptc.com</a>
                             </p>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
@@ -53,33 +53,9 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">Money Club</h2>
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="Money.club" rel="nofollow" >Money.club</a>
-                            </p>
-                        </div>
-                    </section>
-                    <section class="tm-2-col-img-text">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
-                            <i class="fa fa-5x fa-map-o"></i>
-                            <i class="fa fa-5x fa-rocket"></i>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">1 dollar tasks</h2>
-                            <p class="tm-2-col-text-description">
-                              <a href="1DollarTasks.com" rel="nofollow" >1DollarTasks.com</a>
-                            </p>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
-                            <i class="fa fa-5x fa-map-o"></i>
-                            <i class="fa fa-5x fa-rocket"></i>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">Wen Money Club</h2>
-                            <p class="tm-2-col-text-description">
-                              <a href="WenMoney.club" rel="nofollow" >WenMoney.club</a>
+                              <a href="Money.club" alt='lien sortant' >Money.club</a>
                             </p>
                         </div>
                     </section>
@@ -90,9 +66,9 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">Act Money win</h2>
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="ActMoney.win" rel="nofollow" >ActMoney.win</a>
+                              <a href="1DollarTasks.com" alt='lien sortant' >1DollarTasks.com</a>
                             </p>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
@@ -101,33 +77,9 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">Add Money bid</h2>
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="AddMoney.bid" rel="nofollow" >AddMoney.bid</a>
-                            </p>
-                        </div>
-                    </section>
-                    <section class="tm-2-col-img-text">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
-                            <i class="fa fa-5x fa-map-o"></i>
-                            <i class="fa fa-5x fa-rocket"></i>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">Ad Money host</h2>
-                            <p class="tm-2-col-text-description">
-                              <a href="AdMoney.host" rel="nofollow" >AdMoney.host</a>
-                            </p>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
-                            <i class="fa fa-5x fa-map-o"></i>
-                            <i class="fa fa-5x fa-rocket"></i>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">Ad Money pw</h2>
-                            <p class="tm-2-col-text-description">
-                              <a href="AdMoney.pw" rel="nofollow" >AdMoney.pw</a>
+                              <a href="WenMoney.club" alt='lien sortant' >WenMoney.club</a>
                             </p>
                         </div>
                     </section>
@@ -138,9 +90,9 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">365 day club</h2>
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="365dayclub.com" rel="nofollow" >365dayclub.com</a>
+                              <a href="ActMoney.win" alt='lien sortant' >ActMoney.win</a>
                             </p>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
@@ -149,9 +101,57 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">247 VIP club</h2>
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="247vipclub.com" rel="nofollow" >247vipclub.com</a>
+                              <a href="AddMoney.bid" alt='lien sortant' >AddMoney.bid</a>
+                            </p>
+                        </div>
+                    </section>
+                    <section class="tm-2-col-img-text">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="AdMoney.host" alt='lien sortant' >AdMoney.host</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="AdMoney.pw" alt='lien sortant' >AdMoney.pw</a>
+                            </p>
+                        </div>
+                    </section>
+                    <section class="tm-2-col-img-text">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="365dayclub.com" alt='lien sortant' >365dayclub.com</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="247vipclub.com"  alt='lien sortant' >247vipclub.com</a>
                             </p>
                         </div>
                     </section>
