--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
                             <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="50dollarptc.com" alt='lien sortant' >50dollarptc.com</a>
+                              <a href="50dollarptc.com" title='lien sortant' >50dollarptc.com</a>
                             </p>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
@@ -55,31 +55,7 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
                             <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="Money.club" alt='lien sortant' >Money.club</a>
-                            </p>
-                        </div>
-                    </section>
-                    <section class="tm-2-col-img-text">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
-                            <i class="fa fa-5x fa-map-o"></i>
-                            <i class="fa fa-5x fa-rocket"></i>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">liens sortants</h2>
-                            <p class="tm-2-col-text-description">
-                              <a href="1DollarTasks.com" alt='lien sortant' >1DollarTasks.com</a>
-                            </p>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
-                            <i class="fa fa-5x fa-map-o"></i>
-                            <i class="fa fa-5x fa-rocket"></i>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">liens sortants</h2>
-                            <p class="tm-2-col-text-description">
-                              <a href="WenMoney.club" alt='lien sortant' >WenMoney.club</a>
+                              <a href="Money.club" title='lien sortant' >Money.club</a>
                             </p>
                         </div>
                     </section>
@@ -92,7 +68,7 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
                             <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="ActMoney.win" alt='lien sortant' >ActMoney.win</a>
+                              <a href="1DollarTasks.com" title='lien sortant' >1DollarTasks.com</a>
                             </p>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
@@ -103,31 +79,7 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
                             <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="AddMoney.bid" alt='lien sortant' >AddMoney.bid</a>
-                            </p>
-                        </div>
-                    </section>
-                    <section class="tm-2-col-img-text">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
-                            <i class="fa fa-5x fa-map-o"></i>
-                            <i class="fa fa-5x fa-rocket"></i>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">liens sortants</h2>
-                            <p class="tm-2-col-text-description">
-                              <a href="AdMoney.host" alt='lien sortant' >AdMoney.host</a>
-                            </p>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
-                            <i class="fa fa-5x fa-map-o"></i>
-                            <i class="fa fa-5x fa-rocket"></i>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
-                            <h2 class="tm-2-col-text-title">liens sortants</h2>
-                            <p class="tm-2-col-text-description">
-                              <a href="AdMoney.pw" alt='lien sortant' >AdMoney.pw</a>
+                              <a href="WenMoney.club" title='lien sortant' >WenMoney.club</a>
                             </p>
                         </div>
                     </section>
@@ -140,7 +92,7 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
                             <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="365dayclub.com" alt='lien sortant' >365dayclub.com</a>
+                              <a href="ActMoney.win" title='lien sortant' >ActMoney.win</a>
                             </p>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
@@ -151,7 +103,55 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
                             <h2 class="tm-2-col-text-title">liens sortants</h2>
                             <p class="tm-2-col-text-description">
-                              <a href="247vipclub.com"  alt='lien sortant' >247vipclub.com</a>
+                              <a href="AddMoney.bid" title='lien sortant' >AddMoney.bid</a>
+                            </p>
+                        </div>
+                    </section>
+                    <section class="tm-2-col-img-text">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="AdMoney.host" title='lien sortant' >AdMoney.host</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="AdMoney.pw" title='lien sortant' >AdMoney.pw</a>
+                            </p>
+                        </div>
+                    </section>
+                    <section class="tm-2-col-img-text">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="365dayclub.com" title='lien sortant' >365dayclub.com</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens sortants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="247vipclub.com"  title='lien sortant' >247vipclub.com</a>
                             </p>
                         </div>
                     </section>
