add meta google

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="r-sUc_wAxdCUc48lmYV4cfat0llB5pF_wOEVmIheOWg" />
 
     <title>L'expert des liens sortants</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  <!-- Google web font "Open Sans" -->
