--- a/home.html
+++ b/home.html
@@ -156,6 +156,127 @@
                             </p>
                         </div>
                     </section>
+                    <section class="tm-2-col-img-text">
+                      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                          <i class="fa fa-5x fa-map-o"></i>
+                          <i class="fa fa-5x fa-rocket"></i>
+                      </div>
+
+                      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                          <h2 class="tm-2-col-text-title">liens entrants</h2>
+                          <p class="tm-2-col-text-description">
+                            <a href="textspeier.de" title='lien sortant' >textspeier.de</a>
+                          </p>
+                      </div>
+                      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                          <i class="fa fa-5x fa-map-o"></i>
+                          <i class="fa fa-5x fa-rocket"></i>
+                      </div>
+
+                      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                          <h2 class="tm-2-col-text-title">liens entrants</h2>
+                          <p class="tm-2-col-text-description">
+                            <a href="amazon-sicherheit.kunden-ueberpruefung.xyz"  title='lien sortant' >amazon-sicherheit.kunden-ueberpruefung.xyz</a>
+                          </p>
+                      </div>
+                    </section>
+                    <section class="tm-2-col-img-text">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens entrants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="alegroup.info/ntnrrhst	" title='lien sortant' >alegroup.info/ntnrrhst	</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens entrants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="fourthgate.org/Yryzvt"  title='lien sortant' >fourthgate.org/Yryzvt</a>
+                            </p>
+                        </div>
+                    </section>
+                    <section class="tm-2-col-img-text">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens entrants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="dieutribenhkhop.com/parking/" title='lien sortant' >dieutribenhkhop.com/parking/</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens entrants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="	ssl-6582datamanager.de/"  title='lien sortant' >	ssl-6582datamanager.de/</a>
+                            </p>
+                        </div>
+                    </section>
+                    <section class="tm-2-col-img-text">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens entrants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="privatkunden.datapipe9271.com/" title='lien sortant' >privatkunden.datapipe9271.com/</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens entrants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="ad.getfond.info"  title='lien sortant' >ad.getfond.info</a>
+                            </p>
+                        </div>
+                    </section>
+                    <section class="tm-2-col-img-text">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens entrants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="geil.alon3.tk/rncbu3.html" title='lien sortant' >geil.alon3.tk/rncbu3.html</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 tm-2-col-img">
+                            <i class="fa fa-5x fa-map-o"></i>
+                            <i class="fa fa-5x fa-rocket"></i>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-2-col-text">
+                            <h2 class="tm-2-col-text-title">liens entrants</h2>
+                            <p class="tm-2-col-text-description">
+                              <a href="losas.cabanaslanina.com.ar/wkicrz3.html"  title='lien sortant' >losas.cabanaslanina.com.ar/wkicrz3.html</a>
+                            </p>
+                        </div>
+                    </section>
+
                 </div>
 
             </div> <!-- About section, tm-section-1 & 2 -->
